<resources>
    <string name="app_name">MSP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MobileSoftware 7조</string>
    <string name="nav_header_subtitle">여재우 김중원</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_list">식단 리스트</string>
    <string name="menu_calender">식단 캘린더</string>
    <string name="inputFoodName">음식 이름</string>
    <string name="inputFoodCount">음식 수량</string>
    <string name="inputFoodFeel">음식 리뷰</string>
    <string name="inputFoodTime">식사 시간</string>
    <string name="inputFoodInformation">식사의 사진을 입력해주세요</string>
    <string name="save_meal">식단 저장</string>
    <string name="take_photo">사진 찍기</string>
    <string name="open_gallery">갤러리에서 선택하기</string>
    <string name="open_time">식사시간 선택하기</string>
    <string name="open_date">식사날짜 선택하기</string>
    <string name="home_banner">오늘의 칼로리</string>
    <string name="home_sub_banner">어제의 칼로리</string>
    <string name="food_name">음식이름을 입력해주세요</string>
    <string name="food_quantity">얼마나 드셨나요?</string>
    <string name="food_review">이 음식은 어뗘셨나요?</string>
    <string name="set_location">식사장소입력하기</string>

    <string name="menu_list">식사 리스트</string>
    <string name="menu_calender">식사 캘린더</string>
    <string name="home_banner">다앱에 오신걸 환영합니다</string>
    <string name="home_sub_banner">오늘 식사의 칼로리 총량</string>
    <string name="image_explanation">imageView</string>
    <string name="text_explanation">dateView</string>
    <string name="inforName">name</string>
    <string name="inforCount">count</string>
    <string name="inforFeel">feel</string>
    <string name="inforDate">date</string>
    <string name="backButton">뒤로가기</string>
    <string name="chooseTime">[선택]</string>
    <string name="googlemap">현 위치 설정</string>
</resources>