<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MSP.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:popupTheme="@style/Theme.MSP.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/inforName"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/inforName"
        app:layout_constraintEnd_toStartOf="@+id/inforCount"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showImage" />

    <TextView
        android:id="@+id/inforCount"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/inforCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showImage" />

    <TextView
        android:id="@+id/inforDate"
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:gravity="center|center_horizontal"
        android:text="@string/inforDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/inforFeel"
        android:layout_width="349dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/inforFeel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/showImage"
        android:layout_width="337dp"
        android:layout_height="354dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inforDate"
        app:srcCompat="@drawable/ic_menu_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>